--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-## URBSTAT default options.
+## URBSTAT custom options.
+## Rename this file to ".env"
 ##
 ## Cofing file rules:
 ## - Empty values become empty strings.
-## - Values provided in this file are overwritten by values in ".env" file.
+## - Values provided in this file are overwriting default values from ".env.defauls" file.
 ##
 
 URBSTAT_SERVER_URL="http://127.0.0.1:55414"
