--- a/.env.defaults
+++ b/.env.defaults
@@ -1,4 +1,5 @@
 ## URBSTAT default options.
+## Do not modify this file, use ".env" file for your custom options.
 ##
 ## Cofing file rules:
 ## - Empty values become empty strings.
