--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,16 @@
-## URBSTAT custom options.
-## Rename this file to ".env"
+## URBSTAT example configuration file, copy or rename it as ".env" file
 ##
-## Cofing file rules:
-## - Empty values become empty strings.
-## - Values provided in this file are overwriting default values from ".env.defauls" file.
+## - Default options are configured in `.env.defaults` file,
+##   do not modify that file
+## - Set your custom options in `.env` file, check `.env.example` for
+##   available options
+## - Most options can also be modified at run time with command options,
+##   check `urbstat <command> --help` for more details
+## - Unless it is a default installation (localhost:55414, admin,
+##   no password), you should set at least `URBSTAT_SERVER_URL`,
+##   `URBSTAT_SERVER_USERNAME` and `URBSTAT_SERVER_PASSWORD`
+## - All configuration files should be placed in the same directory
+##   as downloaded binary file
 ##
 
 URBSTAT_SERVER_URL="http://127.0.0.1:55414"
