Implement get-usage command

--- a/.env.defaults
+++ b/.env.defaults
@@ -41,3 +41,9 @@ URBSTAT_ACTIVITIES_SORT_LAST="time"
 
 ## Accepted values: info, raw
 URBSTAT_CLIENT_FORMAT="info"
+
+## Accepted values: table, list, raw
+URBSTAT_USAGE_FORMAT="table"
+
+## Accepted values: name, file, image, total
+URBSTAT_USAGE_SORT="total"
