--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,16 @@
-## URBSTAT example configuration file, copy or rename it as ".env" file
+## URBSTAT default configuration file, copy or rename it as ".env" file
 ##
-## - Default options are configured in `.env.defaults` file,
-##   do not modify that file
-## - Set your custom options in `.env` file, check `.env.example` for
-##   available options
-## - Most options can also be modified at run time with command options,
-##   check `urbstat <command> --help` for more details
-## - Unless it is a default installation (localhost:55414, admin,
-##   no password), you should set at least `URBSTAT_SERVER_URL`,
-##   `URBSTAT_SERVER_USERNAME` and `URBSTAT_SERVER_PASSWORD`
-## - All configuration files should be placed in the same directory
-##   as downloaded binary file
+## - The default options are already set up in the .env.defaults file, so please
+##   avoid modifying it.
+## - You can set up your own custom options in the .env file, which you can find
+##   examples of in the .env.example file.
+## - Many options can also be adjusted during runtime by using command options. For
+##   more details, please refer to urbstat <command> --help.
+## - If you're not using the default installation (i.e. localhost:55414, admin, no
+##   password), you'll need to set at least URBSTAT_SERVER_URL,
+##   URBSTAT_SERVER_USERNAME, and URBSTAT_SERVER_PASSWORD.
+## - Make sure to place all configuration files in the same directory as the
+##   downloaded binary file.
 ##
 
 URBSTAT_SERVER_URL="http://127.0.0.1:55414"
