Remove unsupported format value

--- a/.env.defaults
+++ b/.env.defaults
@@ -39,7 +39,7 @@ URBSTAT_ACTIVITIES_SORT_CURRENT="client"
 ## Accepted values: client, time, duration, size
 URBSTAT_ACTIVITIES_SORT_LAST="time"
 
-## Accepted values: table, list, raw
+## Accepted values: table, raw
 URBSTAT_USAGE_FORMAT="table"
 
 ## Accepted values: name, file, image, total
