--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "imports": {
-    "std/": "https://deno.land/std@0.187.0/",
-    "cliffy/": "https://deno.land/x/cliffy@v0.25.7/",
+    "std/": "https://deno.land/std@0.214.0/",
+    "cliffy/": "https://deno.land/x/cliffy@v1.0.0-rc.3/",
     "ms/": "https://cdn.skypack.dev/ms@2.1.3/"
   },
   "fmt": {
