--- a/deno.json
+++ b/deno.json
@@ -1,12 +1,16 @@
 {
-  "imports": {
-    "std/": "https://deno.land/std@0.218.2/",
-    "cliffy/": "https://deno.land/x/cliffy@v1.0.0-rc.3/",
-    "ms/": "https://cdn.skypack.dev/ms@2.1.3/"
-  },
+  "version": "0.10.0",
   "fmt": {
     "options": {
       "singleQuote": true
     }
+  },
+  "imports": {
+    "@cliffy/ansi": "jsr:@cliffy/ansi@1.0.0-rc.7",
+    "@cliffy/command": "jsr:@cliffy/command@1.0.0-rc.7",
+    "@cliffy/prompt": "jsr:@cliffy/prompt@1.0.0-rc.7",
+    "@cliffy/table": "jsr:@cliffy/table@1.0.0-rc.7",
+    "@std/dotenv": "jsr:@std/dotenv@^0.225.2",
+    "ms": "npm:ms@^2.1.3"
   }
 }
