--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,8 @@
 {
-  "version": "0.10.0",
+  "version": "0.11.0",
   "fmt": {
     "options": {
+      // "lineWidth": 120,
       "singleQuote": true
     }
   },
@@ -11,6 +12,7 @@
     "@cliffy/prompt": "jsr:@cliffy/prompt@1.0.0-rc.7",
     "@cliffy/table": "jsr:@cliffy/table@1.0.0-rc.7",
     "@std/dotenv": "jsr:@std/dotenv@^0.225.2",
-    "ms": "npm:ms@^2.1.3"
+    "ms": "npm:ms@^2.1.3",
+    "urbackup-server-api": "npm:urbackup-server-api@^0.53.1"
   }
 }
