--- a/deno.json
+++ b/deno.json
@@ -2,7 +2,7 @@
   "version": "0.11.0",
   "fmt": {
     "options": {
-      // "lineWidth": 120,
+      "lineWidth": 120,
       "singleQuote": true
     }
   },
