--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.13.2",
+  "version": "0.14.0-step1",
   "fmt": {
     "lineWidth": 120,
     "proseWrap": "preserve",
@@ -37,6 +37,6 @@
     "@cliffy/table": "jsr:@cliffy/table@1.0.0-rc.7",
     "@std/dotenv": "jsr:@std/dotenv@^0.225.3",
     "ms": "npm:ms@^2.1.3",
-    "urbackup-server-api": "npm:urbackup-server-api@^0.80.0"
+    "urbackup-server-api": "npm:urbackup-server-api@0.80.0"
   }
 }
