Implement `users` command

--- a/urbstat.conf.example
+++ b/urbstat.conf.example
@@ -64,3 +64,9 @@ URBSTAT_USAGE_SORT="total"
 
 ## Output format options for client details: table, raw
 URBSTAT_CLIENT_FORMAT="table"
+
+## Sorting options for users: name, id
+URBSTAT_USERS_SORT="name"
+
+## Output format options for users: table, list, number, raw
+URBSTAT_USERS_FORMAT="table"
