--- a/deno.json
+++ b/deno.json
@@ -37,5 +37,6 @@
     "@cliffy/table": "jsr:@cliffy/table@1.0.0-rc.7",
     "@std/dotenv": "jsr:@std/dotenv@^0.225.3",
     "urbackup-server-api": "npm:urbackup-server-api@^0.90.0"
-  }
+  },
+  "unstable": ["temporal"]
 }
