--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.17.0-unstable",
+  "version": "0.17.0",
   "fmt": {
     "lineWidth": 200,
     "proseWrap": "preserve",
@@ -35,7 +35,7 @@
     "@cliffy/command": "jsr:@cliffy/command@1.0.0-rc.7",
     "@cliffy/prompt": "jsr:@cliffy/prompt@1.0.0-rc.7",
     "@cliffy/table": "jsr:@cliffy/table@1.0.0-rc.7",
-    "@std/dotenv": "jsr:@std/dotenv@^0.225.3",
+    "@std/dotenv": "jsr:@std/dotenv@^0.225.4",
     "urbackup-server-api": "npm:urbackup-server-api@^0.90.0"
   },
   "unstable": ["temporal"]
